Fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
-@layer utilities {
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .scrollbar-hide::-webkit-scrollbar {
-        display: none;
-    }
+@layer base {
+	/* Target the HTML and BODY elements directly */
+	html,
+	body {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
 
-    /* Hide scrollbar for IE, Edge and Firefox */
-    .scrollbar-hide {
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-    }
+	/* Target the pseudo-elements */
+	html::-webkit-scrollbar,
+	body::-webkit-scrollbar {
+		display: none;
+	}
 }
